src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Encrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the device encrypted?</description>
        <label>Encrypted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled_on_MDM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the device enrolled on the MDM platform?</description>
        <label>Enrolled on MDM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMEI_Number__c</fullName>
        <description>IMEI Number of the device if it has one.</description>
        <label>IMEI Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Lookup</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>